# google_trends_store

./: README.md  docker-compose.yaml  dockerfile  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml
src/: helper_functions.py
src/storetrends/: config.py  trends_store.py
