[metadata]
name = storetrends
version = 0.0.14
author = Vivek Loganathan
author_email = vivek87799@gmail.com
description = Store google trends data from kafka topic to cloud
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vivek87799/google_trends_ingest.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
